# tinychronicler

./: .gitignore  HARDWARE.md  LICENSE  README.md  SETUP.md  pyproject.toml  setup.cfg  tinychronicler.ino  tinychronicler.pd
files/midi/: test-module-8-4_4_chord.mid
midi/: 1.mid  10.mid  11.mid  12.mid  13.mid  14.mid  15.mid  16.mid  17.mid  18.mid  19.mid  20.mid  7.mid  8.mid  9.mid  module-3notes-1.mid  module-3notes-3.mid  module-3notes-7.mid  test-module-3-4_4.mid  test-module-5-5_4.mid  test-module-7-4_4_unmetered.mid
midi/human/: Mod-1.mid  Mod-10.mid  Mod-11.mid  Mod-12.mid  Mod-13.mid  Mod-14.mid  Mod-15.mid  Mod-16.mid  Mod-17.mid  Mod-18.mid  Mod-2.mid  Mod-3.mid  Mod-4.mid  Mod-5.mid  Mod-6.mid  Mod-7.mid  Mod-8.mid  Mod-9.mid
midi/robot/: TC-1.mid  TC-10.mid  TC-11.mid  TC-12.mid  TC-2.mid  TC-3.mid  TC-4.mid  TC-5.mid  TC-6.mid  TC-7.mid  TC-8.mid  TC-9.mid  TC-Mod-1.mid  TC-Mod-10.mid  TC-Mod-11.mid  TC-Mod-12.mid  TC-Mod-13.mid  TC-Mod-14.mid  TC-Mod-15.mid  TC-Mod-16.mid  TC-Mod-17.mid  TC-Mod-18.mid  TC-Mod-2.mid  TC-Mod-3.mid  TC-Mod-4.mid  TC-Mod-5.mid  TC-Mod-6.mid  TC-Mod-7.mid  TC-Mod-8.mid  TC-Mod-9.mid
models/: .gitignore
notebooks/: .gitignore  Tiny_Chronicler_Composition.ipynb  Tiny_Chronicler_Generate_Score.ipynb  generate-midi.ipynb  onset.ipynb  requirements.txt
notebooks/files/midi/: test-module-2-4_4.mid  test-module-6-6_8_2bars.mid
notebooks/files/midi/2er/: module-2notes-2.mid
scripts/: Tiny_Chronicler_Generate_Score.ipynb  models.sh  setup-pi.sh  start.sh  stop.sh
tinychronicler/: __init__.py  __main__.py  constants.py  crud.py  database.py  files.py  generator.py  helpers.py  main.py  models.py  router.py  schemas.py  server.py  tasks.py
tinychronicler/api/: __init__.py  router.py
tinychronicler/database/: __init__.py  constants.py  database.py  models.py  schemas.py
tinychronicler/generator/: __init__.py  audio.py  generator.py  midi.py  movements.py  notes.py  parameters.py
tinychronicler/io/: __init__.py  audio.py  led.py  matrix.py  midi.py  osc.py  printer.py  screen.py  tests.py  video.py
tinychronicler/score/: __init__.py  player.py  score.py
tinychronicler/server/: __init__.py  constants.py  crud.py  files.py  router.py  server.py  tasks.py  ws.py
tinychronicler/web/: .eslintrc  README.md  __init__.py  constants.py  package-lock.json  package.json  router.py  tsconfig.json  webpack.config.ts
tinychronicler/web/src/: Router.tsx  custom.d.ts  index.tsx  instruments.ts  types.d.ts
tinychronicler/web/static/: index.js  index.js.LICENSE.txt  index.js.map
tinychronicler/web/templates/: chronicles.html  index.html  layout.html
(+39 files in other folders)
