[tool.poetry]
name = "tinychronicler"
version = "0.1.0"
description = "Travelling music robot"
authors = ["Andreas Dzialocha <x12@adz.garden>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
SQLAlchemy = "^1.3.24"
databases = "^0.4.3"
aiosqlite = "^0.17.0"
loguru = "^0.5.3"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
