[tool.poetry]
name = "tinychronicler"
version = "0.1.0"
description = "Travelling music robot"
authors = ["Andreas Dzialocha <x12@adz.garden>"]
license = "MIT"

[tool.poetry.dependencies]
Jinja2 = "^3.1.2"
Pillow = "^9.1.1"
PyDTMC = "^6.6.0"
SQLAlchemy = "^1.3.24"
aiofiles = "^0.8.0"
aiosqlite = "^0.17.0"
audioread = "^3.0.0"
click = "^8.1.3"
databases = "^0.4.3"
fastapi = "^0.78.0"
fastapi-offline = "^1.5.0"
fastapi-pagination = "^0.9.3"
ffmpeg = "^1.4"
librosa = "^0.9.2"
loguru = "^0.6.0"
numpy = "^1.23.3"
pretty_midi = "^0.2.9"
pydantic = "^1.9.1"
pyserial = "^3.5"
python = "^3.8"
python-multipart = "^0.0.5"
python-osc = "^1.8.0"
screeninfo = "^0.8.1"
thermalprinter = "^0.2.0"
uvicorn = "^0.17.6"
vosk = "^0.3.44"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
jedi = "^0.18.1"
jupyterlab = "^3.4.8"
neovim = "^0.3.1"
python-lsp-server = {extras = ["all"], version = "^1.4.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
